# cpp_proj_template

./: .gitignore  CMakeLists.txt  README.md  doxy_config.cnf
benchmark/: CMakeLists.txt  bench1
benchmark/src/: bench1.cpp
examples/: CMakeLists.txt
include/myproject/: base.h
src/: base.cpp
test/: CMakeLists.txt  test11
test/src/: test11.cpp
